added usercontents update
